--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
@@ -5,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>درباره ما - توسعه سلامت هوشمند سیمرغ</title>
     <link rel="icon" href="assets/img/primary-favicon.png" type="image/jpeg">
-    <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" >
     <link rel="stylesheet" href="assets/custom/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta8ppcStkpop4pABmrAPgmT8wQ7x5Qo0TvmWTNA0NFz+tA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
