--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,12 +1,14 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>توسعه سلامت هوشمند سیمرغ - نوآوری هوشمند برای سلامت آینده</title>
-    <link rel="icon" href="assets/img/primary-favicon.png" type="image/jpeg">
-    <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" >
-    <link rel="stylesheet" href="assets/custom/css/style.css">
+    <link rel="icon" href="{% static 'home/img/primary-favicon.png' %}" type="image/jpeg">
+    <link rel="stylesheet" href="{% static 'home/css/bootstrap.rtl.min.css' %}" >
+    <link rel="stylesheet" href="{% static 'home/custom/css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta8ppcStkpop4pABmrAPgmT8wQ7x5Qo0TvmWTNA0NFz+tA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
@@ -97,8 +99,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/primary-logo.png" alt="لوگوی سیمرغ">
+                <a class="navbar-brand" href="index">
+                    <img src="{% static 'home/img/primary-logo.png' %}" alt="لوگوی سیمرغ" style="min-height:80px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -106,23 +108,23 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">صفحه اصلی</a>
+                            <a class="nav-link active" aria-current="page" href="index">صفحه اصلی</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="news.html">اخبار و اطلاعیه ها</a>
+                            <a class="nav-link" href="news">اخبار و اطلاعیه ها</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="products.html">معرفی محصولات</a>
+                            <a class="nav-link" href="products">معرفی محصولات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">درباره ما</a>
+                            <a class="nav-link" href="about">درباره ما</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">تماس با ما</a>
+                            <a class="nav-link" href="contactus">تماس با ما</a>
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <a href="about.html" class="btn btn-primary">مطالعه بیشتر درباره شرکت</a>
+                        <a href="about" class="btn btn-primary">مطالعه بیشتر درباره شرکت</a>
                     </div>
                 </div>
             </div>
@@ -132,14 +134,14 @@
     <main>
     <section class="hero-section">
         <video autoplay muted loop class="hero-video">
-            <source src="assets/video/hands.mp4" type="video/mp4">
+            <source src="{% static 'home/video/hands.mp4' %}" type="video/mp4">
             مرورگر شما از تگ ویدئو پشتیبانی نمی کند.
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1 class="display-3 fw-bold text-white mb-4">نوآوری هوشمند برای سلامت آینده</h1>
             <p class="lead text-white-50 mb-5">همراه شما در مسیر سلامت هوشمند، پیشرو در ادغام تکنولوژی و خدمات درمانی.</p>
-            <a href="about.html" class="btn btn-lg btn-primary shadow-lg">مطالعه بیشتر درباره شرکت</a>
+            <a href="about" class="btn btn-lg btn-primary shadow-lg">مطالعه بیشتر درباره شرکت</a>
         </div>
     </section>
     </main>
@@ -152,13 +154,13 @@
                     <p>نوآوری هوشمند برای سلامت آینده. ما در توسعه سلامت هوشمند سیمرغ متعهد به ادغام تکنولوژی در سلامت و ارتقای کیفیت خدمات درمانی هستیم. برای اطلاعات بیشتر به صفحه درباره ما مراجعه کنید.</p>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <h5>لینک\u200cهای سریع</h5>
+                    <h5>لینک های سریع</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-decoration-none text-dark">صفحه اصلی</a></li>
-                        <li><a href="news.html" class="text-decoration-none text-dark">اخبار و اطلاعیه\u200cها</a></li>
-                        <li><a href="products.html" class="text-decoration-none text-dark">معرفی محصولات</a></li>
-                        <li><a href="about.html" class="text-decoration-none text-dark">درباره ما</a></li>
-                        <li><a href="contact.html" class="text-decoration-none text-dark">تماس با ما</a></li>
+                        <li><a href="index" class="text-decoration-none text-dark">صفحه اصلی</a></li>
+                        <li><a href="news" class="text-decoration-none text-dark">اخبار و اطلاعیه ها</a></li>
+                        <li><a href="products" class="text-decoration-none text-dark">معرفی محصولات</a></li>
+                        <li><a href="about" class="text-decoration-none text-dark">درباره ما</a></li>
+                        <li><a href="contact" class="text-decoration-none text-dark">تماس با ما</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 mb-3">
@@ -181,6 +183,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="assets/js/bootstrap.min.js"  ></script>
+    <script src="{% static 'home/js/bootstrap.min.js' %}"  ></script>
 </body>
 </html>
